--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -22,6 +22,8 @@
     "ru.leopotam.ecsproto-qol": "https://gitverse.ru/leopotam/ecsproto-qol.git",
     "ru.leopotam.ecsproto.unity": "https://gitverse.ru/leopotam/ecsproto.unity.git",
     "ru.leopotam.ecsproto.unity.physics2d": "https://gitverse.ru/leopotam/ecsproto.unity.physics2d.git",
+    "ru.leopotam.ecsproto.ai.utility": "https://gitverse.ru/leopotam/ecsproto.ai.utility.git",
+    "ru.leopotam.ecsproto.ai.utility.unity": "https://gitverse.ru/leopotam/ecsproto.ai.utility.unity.git",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
